; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_install.c_install_info_add_auto.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_install.c_install_info_add_auto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_3__*, i8*, i32**)* @install_info_add_auto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @install_info_add_auto(i8* %0, %struct.TYPE_3__* %1, i8* %2, i32** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32** %3, i32*** %9, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @assert(i8* %11)
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @assert(i8* %13)
  %15 = load i8*, i8** %8, align 8
  %16 = call i64 @path_is_absolute(i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %28

18:                                               ; preds = %4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %8, align 8
  %23 = call i8* @prefix_roota(i32 %21, i8* %22)
  store i8* %23, i8** %10, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i32**, i32*** %9, align 8
  %27 = call i32 @install_info_add(i8* %24, i8* null, i8* %25, i32 0, i32** %26)
  store i32 %27, i32* %5, align 4
  br label %33

28:                                               ; preds = %4
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i32**, i32*** %9, align 8
  %32 = call i32 @install_info_add(i8* %29, i8* %30, i8* null, i32 0, i32** %31)
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %28, %18
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @path_is_absolute(i8*) #1

declare dso_local i8* @prefix_roota(i32, i8*) #1

declare dso_local i32 @install_info_add(i8*, i8*, i8*, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
